Fixed reset of note input values after collapsing meal

--- a/src/components/MealsListItem/MealsListItem.scss
+++ b/src/components/MealsListItem/MealsListItem.scss
@@ -44,6 +44,10 @@ $inner-padding: 10px;
     border-top: none;
     padding: $inner-padding;
 
+    &_collapsed {
+      display: none;
+    }
+
     &__notes {
       position: relative;
       margin-top: 10px;
